@@ -8,11 +8,11 @@ BEGIN
   $| = 1;
   unshift @INC, '../lib'; # for running manually
   # chdir 't' if -d 't';
-  plan tests => 945;
+  plan tests => 983;
   }
 
-use Math::BigFloat;
 use Math::BigInt lib => 'BitVect';
+use Math::BigFloat;
 
 my ($x,$y,$f,@args,$ans,$try,$ans1,$ans1_str,$setup);
 while (<DATA>)
@@ -47,6 +47,10 @@ while (<DATA>)
         $try .= "\$x;";
       } elsif ($f eq "binf") {
         $try .= "\$x->binf('$args[1]');";
+      } elsif ($f eq "bnan") {
+        $try .= "\$x->bnan();";
+      } elsif ($f eq "bone") {
+        $try .= "\$x->bone('$args[1]');";
       } elsif ($f eq "bsstr") {
         $try .= "\$x->bsstr();";
       } elsif ($f eq "fneg") {
@@ -156,6 +160,20 @@ __END__
 1:+:+inf
 2:-:-inf
 3:abc:+inf
+&bnan
+abc:NaN
+2:NaN
+-2:NaN
+0:NaN
+&bone
+2:+:1
+-2:-:-1
+-2:+:1
+2:-:-1
+0::1
+-2::1
+abc::1
+2:abc:1
 &bsstr
 +inf:+inf
 -inf:-inf
@@ -201,6 +219,14 @@ abc:NaN
 -123456E-2:-1234.56
 1e1:10
 2e-11:0.00000000002
+# excercise _split
+  .02e-1:0.002
+   000001:1
+   -00001:-1
+   -1:-1
+  000.01:0.01
+   -000.0023:-0.0023
+  1.1e1:11
 -3e111:-3000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
 -4e-1111:-0.0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000004
 &fpow
